--- a/AppMovilPrueba/AppMovilPrueba.iOS/AppMovilPrueba.iOS.csproj
+++ b/AppMovilPrueba/AppMovilPrueba.iOS/AppMovilPrueba.iOS.csproj
@@ -151,6 +151,9 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>11.0.2</Version>
     </PackageReference>
+    <PackageReference Include="Xam.Plugin.Media">
+      <Version>4.0.1.5</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
