--- a/AppMovilPrueba/AppMovilPrueba.Android/Properties/AndroidManifest.xml
+++ b/AppMovilPrueba/AppMovilPrueba.Android/Properties/AndroidManifest.xml
@@ -3,5 +3,17 @@
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="27" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	<application android:label="AppMovilPrueba.Android"></application>
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
+	<uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+	<uses-permission android:name="android.permission.INTERNET" />
+  <uses-feature android:name="android.hardware.location" android:required="false" />
+  <uses-feature android:name="android.hardware.location.gps" android:required="false" />
+  <uses-feature android:name="android.hardware.location.network" android:required="false" />
+	<application android:label="AppMovilPrueba.Android">
+    <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyBh9MMEN9P5ZOj1U5HhuFu9NP6V1PsTKJA" />
+  </application>
 </manifest>
