--- a/AppMovilPrueba/AppMovilPrueba.iOS/AppMovilPrueba.iOS.csproj
+++ b/AppMovilPrueba/AppMovilPrueba.iOS/AppMovilPrueba.iOS.csproj
@@ -154,7 +154,13 @@
     <PackageReference Include="Xam.Plugin.Media">
       <Version>4.0.1.5</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.Essentials">
+      <Version>0.10.0-preview</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
+    <PackageReference Include="Xamarin.Forms.Maps">
+      <Version>3.1.0.697729</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\AppMovilPrueba\AppMovilPrueba.projitems" Label="Shared" />
