--- a/AppMovilPrueba/AppMovilPrueba.Android/AppMovilPrueba.Android.csproj
+++ b/AppMovilPrueba/AppMovilPrueba.Android/AppMovilPrueba.Android.csproj
@@ -115,6 +115,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\DSL.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\formato_usuario.png" />
+  </ItemGroup>
   <Import Project="..\AppMovilPrueba\AppMovilPrueba.projitems" Label="Shared" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
