--- a/AppMovilPrueba/AppMovilPrueba.Android/AppMovilPrueba.Android.csproj
+++ b/AppMovilPrueba/AppMovilPrueba.Android/AppMovilPrueba.Android.csproj
@@ -145,6 +145,12 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\sushi.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\plus.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\minus.png" />
+  </ItemGroup>
   <Import Project="..\AppMovilPrueba\AppMovilPrueba.projitems" Label="Shared" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
